Compiler/tests/good/for2.nx

for(val x : int = 3 ; x < 10 ; x + 1)
{
    printn(x);
}