Compiler/tests/bad/function7.nx
function somar(x : 2, y : int) : int
{
    return 3;
}
